# kimi_mnisc_v2

./: .gitignore  Makefile  README.md  SPEC.md
compiler/: ast_ir.ml  ast_sim.ml  dune  dune-project  eu_isa.ml  eu_isa.mli  lower.ml  main.ml  mnisc.opam  safetensor.ml  test_mnisc.ml  tiling.ml
interfaces/: ast_ir.mli
python_tests/: README.md  __init__.py  compare_outputs.py  generate_safetensors.py  mnisc_q.py  reference_runner.py  requirements.txt  run_e2e_test.py
rtl/: Makefile  act_quant_unit.sv  concat_unit.sv  conv_core_lowbit.sv  create_test_files.py  eu_isa_pkg.sv  eu_sequencer.sv  eu_top.sv  feature_line_buffer.sv  gemm_core_lowbit.sv  muladd2_lut.sv  pool2d_unit.sv  tb_eu_top.cpp  unpool2d_unit.sv  weight_buffer.sv
